--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -69,6 +69,7 @@ aside {
   padding-bottom: 40px;
   padding-right: 40px;
   background-color: $gray;
+  width: 100%;
   ul {
     margin: 0;
     list-style: none;
@@ -80,7 +81,7 @@ aside {
     padding-left: 0;
     width: 100%;
     @include media-breakpoint-up(md) {
-      max-width: 250px;
+      min-width: 245px !important;
     }
     ul {
       display: none;
@@ -98,6 +99,54 @@ aside {
       }
       &.active {
         color: $primary;
+      }
+    }
+  }
+}
+
+.tab {
+  .tab__nav {
+    border-width: 0 0 1px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+    @include media-breakpoint-up(md) {
+      padding-left: 100px;
+      padding-right: calc((100vw - 1160px) / 2);
+      margin-left: -100px;
+      margin-right: calc((100vw - 1160px) / 2 * -1);
+    }
+    ul {
+      li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include media-breakpoint-up(md) {
+          flex: none;
+          width: 150px;
+        }
+        svg {
+          width: $h4;
+          height: auto;
+          margin-right: 10px;
+          transition: fill 0.3s;
+        }
+        &:hover,
+        &.active {
+          svg {
+            fill: $primary;
+          }
+        }
+      }
+    }
+  }
+  .tab__content {
+    border-width: 0;
+    .tab__content__pane {
+      @include media-breakpoint-down(md) {
+        padding-left: 0;
+        padding-right: 0;
       }
     }
   }
