--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -89,7 +89,7 @@ $primary-variant:   $red-500 !default;
 $secondary:         $gray-300 !default;
 $secondary-variant: $gray-500 !default;
 $error:             $primary-variant !default;
-$background:        $white !default;
+$background:        $gray !default;
 $text:              $black !default;
 
 // 社群軟體色碼
@@ -139,7 +139,7 @@ $cw-colors: map-merge((
   "secondary":          ($secondary,          $white),
   "secondary-variant":  ($secondary-variant,  $white),
   "error":              ($error,              $white),
-  "background":         ($background,         $white)
+  "background":         ($background,         $black)
 ), $cw-colors);
 
 // ---------------------------------------------------------
