--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -12,8 +12,8 @@
 @import "logo";
 @import "footer";
 
-@import "button";
-@import "tab";
+@import "component/button";
+@import "component/tab";
 
 hr {
     height: 1px;
